--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
-backend_url=https://samsaga2-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/
-sentiment_analyzer_url=https://sentianalyzer.217v0b1hp6id.us-south.codeengine.appdomain.cloud/
+backend_url=https://samsaga2-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
+sentiment_analyzer_url=https://sentianalyzer.2198p7bfoz05.us-south.codeengine.appdomain.cloud/
